--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
                     <h1>Hi, I'm Abduraxmanov Nurbek</h1>
                     <span class="gray"><strong>Full-stack developer & Software engineer</strong> </span>
                 </div>
-                <p>I am in love with programming, so i started to learn some programming skills on my own. At first it was not as easy as i thought, it was really difficult. Therefor i have learned HTML, CSS, JS for Front-end side and Python for Back-end side. Lately i'm learning more Python than other languages and it is not because of its fame, i'm have been interested in Python for a few years ago, when it wasn't so pupular as it is. In nearly two years i'm going to become Full-stack developer at first then i want to become Software engineer as i dreamt when i was kid.</p>
+                <p>I am in love with programming, so i started to learn some programming skills on my own. At first it was not as easy as i thought, it was really difficult. Therefor i have learned HTML, CSS, JS for Front-end side and Python for Back-end side. Lately i'm learning more Python than other languages and it is not because of its fame, i have been interested in Python for a few years ago, when it wasn't so pupular as it is. In nearly two years i'm going to become Full-stack developer at first then i want to become Software engineer as i dreamt when i was kid.</p>
             </div>
         </div>
     </header>
