--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>Document</title>
+    <title>Resume</title>
 </head>
 <body>
     <header>
@@ -70,6 +70,7 @@
         <div class="contacts">
             <span class="contact__gray">contact</span>
             <a target="_blank" href="https://www.instagram.com/_1nurbek/">https://www.instagram.com/_1nurbek/</a>
+            <a target="_blank" href="https://github.com/bugsssssss">github</a>
             <span>n.soatov@bk.ru</span>
         </div>
     </section>
