--- a/main.html
+++ b/main.html
@@ -69,7 +69,7 @@
         </div>
         <div class="contacts">
             <span class="contact__gray">contact</span>
-            <a target="_blank" href="https://www.instagram.com/_1nurbek/">https://www.instagram.com/_1nurbek/</a>
+            <a target="_blank" href="https://www.instagram.com/_1nurbek/">instagram</a>
             <a target="_blank" href="https://github.com/bugsssssss">github</a>
             <span>n.soatov@bk.ru</span>
         </div>
