--- a/index.html
+++ b/index.html
@@ -9,70 +9,71 @@
     <title>Resume</title>
 </head>
 <body>
-    <header>
-        <div class="header__content">
-            <div class="header__photo">
-                <img src="img/2022-08-02 23.05.23.jpg" alt="">
-            </div>
-            <div class="header__text">
-                <div>
-                    <h1>Hi, I'm Abduraxmanov Nurbek</h1>
-                    <span class="gray"><strong>Full-stack developer & Software engineer</strong> </span>
-                </div>
-                <p>I am in love with programming, so i started to learn some programming skills on my own. At first it was not as easy as i thought, it was really difficult. Therefor i have learned HTML, CSS, JS for Front-end side and Python for Back-end side. Lately i'm learning more Python than other languages and it is not because of its fame, i have been interested in Python for a few years ago, when it wasn't so pupular as it is. In nearly two years i'm going to become Full-stack developer at first then i want to become Software engineer as i dreamt when i was kid.</p>
-            </div>
-        </div>
-    </header>
-    <section class="career">
-        <h2 class="career__title">
-            My career path in technology
-        </h2>
-        <div class="career__line">
-            <span class="career__line__gray">2019-Present</span>
-            <div class="career__line_wrapper">
-                <div class="career__line__item">
-                </div>
-                <div class="career__circle"></div>
-            </div>
-        </div>
-        <span>Allplay streaming service</span>
-        <br>
-        <span class="career__gray">
-            Content-manager and translator
-        </span>
-        <div class="skills">
-            <div class="skills__item">
-                <span class="skills__title">Softwares</span>
-                <ul class="skills__list">
-                    <li>Figma</li>
-                    <li>Webflow</li>
-                    <li>Photoshop</li>
-                    <li>Illustrator</li>
-                    <li>Premiere Pro</li>
-                    <li>Procreate</li>
-                </ul>
-            </div>
-            <div class="skills__item">
-                <span class="skills__title">Skills</span>
-                <ul class="skills__list">
-                    <li>HTML</li>
-                    <li>CSS (SASS & SCSS)</li>
-                    <li>JS (vue & React)</li>
-                    <li>Python (Django & Flask)</li>
-                    <li>Data base (SQL & MySqL)</li>
-                    <li>C (C++, C#)</li>
-                </ul>
-            </div>
-        </div>
-        <div class="portfolio">
-            <span class="portfolio__span">See my portfolio <a href="#">here</a></span>
-        </div>
-        <div class="contacts">
-            <span class="contact__gray">contact</span>
-            <a target="_blank" href="https://www.instagram.com/_1nurbek/">instagram</a>
-            <a target="_blank" href="https://github.com/bugsssssss">github</a>
-            <span>n.soatov@bk.ru</span>
-        </div>
-    </section>
+   <div class="all_content">
+     <header>
+         <div class="header__content">
+             <div class="header__photo">
+                 <img src="img/2022-08-02 23.05.23.jpg" alt="">
+             </div>
+             <div class="header__text">
+                 <div>
+                     <h1>Hi, I'm Abduraxmanov Nurbek</h1>
+                     <span class="gray"><strong>Full-stack developer & Software engineer</strong> </span>
+                 </div>
+                 <p>I am in love with programming, so I started to learn some programming languages on my own. At first it was not as easy as I thought, but i could handle it. Therefore, I have learned HTML, CSS, JS for Front-end side and Python for Back-end side. Lately, I'm learning more Python than other languages and it is not because of its fame but, i have interested in Python for a few years, when it wasn't so pupular as it is. In nearly two years i'm going to become Full-stack developer, then i want to become Software engineer as i dreamt when i was kid.</p>
+             </div>
+         </div>
+     </header>
+     <section class="career">
+         <h2 class="career__title">
+             My career path in technology
+         </h2>
+         <div class="career__line">
+             <span class="career__line__gray">2019-Present</span>
+             <div class="career__line_wrapper">
+                 <div class="career__line__item">
+                 </div>
+                 <div class="career__circle"></div>
+             </div>
+         </div>
+         <span>Allplay streaming service</span>
+         <br>
+         <span class="career__gray">
+             Content-manager and translator
+         </span>
+         <div class="skills">
+             <div class="skills__item">
+                 <span class="skills__title">Softwares</span>
+                 <ul class="skills__list">
+                     <li>Figma</li>
+                     <li>Webflow</li>
+                     <li>Photoshop</li>
+                     <li>Illustrator</li>
+                     <li>Premiere Pro</li>
+                     <li>Procreate</li>
+                 </ul>
+             </div>
+             <div class="skills__item">
+                 <span class="skills__title">Skills</span>
+                 <ul class="skills__list">
+                     <li>HTML</li>
+                     <li>CSS (SASS & SCSS)</li>
+                     <li>JS (vue & React)</li>
+                     <li>Python (Django & Flask)</li>
+                     <li>Data base (SQL & MySqL)</li>
+                 </ul>
+             </div>
+         </div>
+         <!-- <div class="portfolio">
+             <span class="portfolio__span">See my portfolio <a href="#">here</a></span>
+         </div> -->
+         <div class="contacts">
+             <span class="contact__gray">contact</span>
+             <a target="_blank" href="https://www.instagram.com/_1nurbek/">instagram</a>
+             <a target="_blank" href="https://github.com/bugsssssss">github</a>
+             <span>n.soatov@bk.ru</span>
+         </div>
+     </section>
+   </div>
 </body>
 </html>
