--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                      <li>CSS (SASS & SCSS)</li>
                      <li>JS (vue & React)</li>
                      <li>Python (Django & Flask)</li>
-                     <li>Data base (SQL & MySqL)</li>
+                     <li>Data base (SQL & PostgresSql)</li>
                  </ul>
              </div>
          </div>
