--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
              <div class="header__text">
                  <div>
                      <h1>Hi, I'm Abduraxmanov Nurbek</h1>
-                     <span class="gray"><strong>Full-stack developer & Software engineer</strong> </span>
+                     <span class="gray"><strong>Bsck-end developer & Full-stack developer</strong> </span>
                  </div>
                  <p>I am in love with programming, so I started to learn some programming languages on my own. At first it was not as easy as I thought, but i could handle it. Therefore, I have learned HTML, CSS, JS for Front-end side and Python for Back-end side. Lately, I'm learning more Python than other languages and it is not because of its fame but, i have interested in Python for a few years, when it wasn't so pupular as it is. In nearly two years i'm going to become Full-stack developer, then i want to become Software engineer as i dreamt when i was kid.</p>
              </div>
