day night switcher added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
    <div class="all_content">
+    <img src="img/day_night.png" alt="" id="mode">
      <header>
          <div class="header__content">
              <div class="header__photo">
@@ -42,6 +43,7 @@
              Content-manager and translator
          </span>
          <div class="skills">
+       
              <div class="skills__item">
                  <span class="skills__title">Softwares</span>
                  <ul class="skills__list">
@@ -53,6 +55,13 @@
                      <li>Procreate</li>
                  </ul>
              </div>
+                  <div class="skills__item">
+                <span class="skills__title">IDE</span>
+                <ul class="skills__list">
+                    <li>Visual studio code</li>
+                    <li>Pycharm</li>
+                </ul>
+            </div>
              <div class="skills__item">
                  <span class="skills__title">Skills</span>
                  <ul class="skills__list">
@@ -75,5 +84,6 @@
          </div>
      </section>
    </div>
+   <script src="script.js"></script>
 </body>
 </html>
