--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
    <div class="all_content">
-    <img src="img/day_night.png" alt="" id="mode">
+    <img src="img/day2.png" alt="" id="mode">
+    <!-- <img src="img/day_night.png" alt="" id="mode"> -->
      <header>
          <div class="header__content">
              <div class="header__photo">
@@ -19,7 +20,7 @@
              <div class="header__text">
                  <div>
                      <h1>Hi, I'm Abduraxmanov Nurbek</h1>
-                     <span class="gray"><strong>Back-end developer & Full-stack developer</strong> </span>
+                     <span class="gray"><strong>Back-end & Full-stack developer</strong> </span>
                  </div>
                  <p>I am in love with programming, so I started to learn some programming languages on my own. At first it was not as easy as I thought, but i could handle it. Therefore, I have learned HTML, CSS, JS for Front-end side and Python for Back-end side. Lately, I'm learning more Python than other languages and it is not because of its fame but, i have interested in Python for a few years, when it wasn't so pupular as it is. In nearly two years i'm going to become Full-stack developer, then i want to become Software engineer as i dreamt when i was kid.</p>
              </div>
