--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
    <div class="all_content">
-    <img src="img/day2.png" alt="" id="mode">
+    <img src="img/day.png" alt="" id="mode">
     <!-- <img src="img/day_night.png" alt="" id="mode"> -->
      <header>
          <div class="header__content">
