--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      <header>
          <div class="header__content">
              <div class="header__photo">
-                 <img src="img/2022-08-02 23.05.23.jpg" alt="">
+                 <img src="img/rick-and-morty-puzzled.gif" alt="">
              </div>
              <div class="header__text">
                  <div>
