--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                      <li>JS (vue & React)</li>
                      <li>Python (Django & Flask)</li>
                      <li>Data base (SQL & PostgreSql)</li>
+                     <li>Docker</li>
                  </ul>
              </div>
          </div>
